--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table style="width:100%">
+	<table border="1">
 		<thead>
 			<tr>
 				<th>Part</th>
